# alacritty-sdl2-term-rs

./: Cargo.toml  README.md  build.rs  flake.nix  wrapper.h
src/: ATerm.rs  Matrix.rs  TermDisplay.rs  TerminalSize.rs  TestVars.rs  VTerm.rs  aterm.rs  main.rs  term_display.rs  terminal_size.rs
