[package]
name = "vterm-sdl2-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.64"  # Adjust to the latest version

[dependencies]
nix = { version = "0.29", features = ["process", "term"] }

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf"]
