[package]
name = "alacritty-sdl2-term-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
nix = { version = "0.29", features = ["process", "term"] }
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", rev = "cacdb5bb3b72bad2c729227537979d95af75978f" }
lazy_static = "1.4"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf"]
